Ui rework
See merge request main/Sumatra!2199

sumatra-commit: 72dc8362e50ce6d80051c95dec5d5b661f38b069